third_party/move/move-compiler-v2/tests/checking/control_flow/for_type_mismatch.exp

Diagnostics:
warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
  ┌─ tests/checking/control_flow/for_type_mismatch.move:6:22
  │
6 │             x = x + 1;
  │                      ^

warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
  ┌─ tests/checking/control_flow/for_type_mismatch.move:5:9
  │
5 │ ╭         for (i in true..false) {
6 │ │             x = x + 1;
7 │ │         };
  │ ╰─────────^

error: cannot use `bool` with an operator which expects a value of type `integer`
  ┌─ tests/checking/control_flow/for_type_mismatch.move:5:9
  │
5 │ ╭         for (i in true..false) {
6 │ │             x = x + 1;
7 │ │         };
  │ ╰─────────^

warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
  ┌─ tests/checking/control_flow/for_type_mismatch.move:8:28
  │
8 │         assert!(x == 0, 42);
  │                            ^
